--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ android {
 
 dependencies {
 
+    // https://mvnrepository.com/artifact/org.mariuszgromada.math/MathParser.org-mXparser
+    implementation 'org.mariuszgromada.math:MathParser.org-mXparser:4.4.2'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
